# hextris

./: Actions.h  CMakeLists.txt  Field.cpp  Field.h  Finder.cpp  Finder.h  Logger.cpp  Logger.h  RNGSeed.cpp  RNGSeed.h  Simulate.cpp  Simulate.h  Solver.cpp  Solver.h  main.cpp  readme.md  units.cpp  units.h
